<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16sp"
                android:paddingTop="10sp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"

                    android:layout_marginEnd="5sp"

                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fire"
                    android:contentDescription="@string/interesting_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:text="@string/interesting_dzen"
                    android:textSize="11sp"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <ImageButton
                    android:id="@+id/logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"

                    android:adjustViewBounds="true"
                    android:background="?android:attr/selectableItemBackground"

                    android:contentDescription="@string/account_logo"

                    android:scaleType="centerInside"
                    android:src="@drawable/logo_example"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/logo"
                    android:text="@string/home_content_nickname_example"/>

                <TextView
                    android:id="@+id/subscribers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nickname"
                    android:layout_alignStart="@+id/nickname"
                    android:text="@string/home_content_subscribers_example"
                    android:textSize="11sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:layout_marginEnd="5sp"
                    android:layout_toStartOf="@id/more"
                    android:background="?android:attr/selectableItemBackground"
                    android:minWidth="0dp"
                    android:minHeight="0dp"

                    android:padding="0dp"

                    android:text="@string/subscribe_button_text"
                    android:textColor="@color/pure_red"
                    android:textSize="11sp"
                    tools:ignore="RelativeOverlap,TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/more"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"

                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/more"
                    android:src="@drawable/more"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/image_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"

                android:src="@drawable/example"
                android:contentDescription="@string/image_video" />

            <TextView
                android:id="@+id/video_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"

                android:text="@string/home_content_video_name_example"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"

                    android:text="@string/home_content_year_example"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/home_content_delimiter"/>

                <TextView
                    android:id="@+id/watching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/home_content_watching_example"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp">


                <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="5dp"

                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/like"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    android:contentDescription="@string/like_button" />

                <TextView
                    android:id="@+id/number_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home_content_number_likes_example"/>

                <ImageButton
                    android:id="@+id/comment_button"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="5dp"

                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/comment"
                    tools:ignore="TouchTargetSizeCheck"
                    android:contentDescription="@string/comment_button" />

                <TextView
                    android:id="@+id/number_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home_content_number_comments_example"/>

                <ImageButton
                    android:id="@+id/reply_button"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"

                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/reply"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    android:contentDescription="@string/reply_button" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/dislike_button"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"

                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/dislike"
                    tools:ignore="TouchTargetSizeCheck"
                    android:contentDescription="@string/dislike_button" />

            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>