<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:contentDescription="@string/dzen"
            android:src="@drawable/dzen_logo" />

        <TextView
            style="@style/text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"


            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            style="@style/search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"

            android:contentDescription="@string/search"

            android:onClick="onClickSearch"
            tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15sp"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.lab1_2.views.HomeContent
                android:id="@+id/back"
                style="@style/home_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:logo="@drawable/logo_example"
                app:nickname="Fadeevich"
                app:number_comments="21"

                app:number_likes="21М"
                app:number_subscribers="21М подписчиков"
                app:number_watching="1.3М просмотров"
                app:src_image_video="@drawable/example"
                app:video_name="lofi hip hop radio"
                app:year="9 лет назад" />

            <com.example.lab1_2.views.HomeContent
                style="@style/home_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:logo="@drawable/logo_example"
                app:nickname="Fadeevich"
                app:number_comments="1"

                app:number_likes="2"
                app:number_subscribers="21М подписчиков"
                app:number_watching="10 просмотров"
                app:src_image_video="@drawable/example1"

                app:video_name="Твоё имя - Русский трейлер"
                app:year="3 дня назад" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        style="@style/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <com.example.lab1_2.views.ButtonMenu
            style="@style/button_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            app:src_image="@drawable/home"
            app:text="@string/home_button" />

        <com.example.lab1_2.views.ButtonMenu
            style="@style/button_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            app:src_image="@drawable/movies"
            app:text="@string/movies_button" />

        <com.example.lab1_2.views.ButtonMenu
            style="@style/button_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            app:src_image="@drawable/create"
            app:text="@string/create_button" />

        <com.example.lab1_2.views.ButtonMenu
            style="@style/button_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            app:src_image="@drawable/video"
            app:text="@string/video_button" />

        <com.example.lab1_2.views.ButtonMenu
            style="@style/button_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            app:src_image="@drawable/channel"
            app:text="@string/channel_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>